--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-simple-star-rating": "^5.1.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
